<resources>
    <string name="version">Version</string>
    <string name="version_value">1.0.0</string>
    <string name="hatdex_ltd">HAT Data Exchange Ltd.</string>
    <string name="hatlab">HATLAB</string>
    <string name="vendor_where_you_got">Vendor (where you got your HAT)</string>
    <string name="hat_issuer">HAT issuer</string>
    <string name="service_of_hat_lab">Service of hat lab</string>
    <string name="data_trader">Data trader</string>
    <string name="data_trader_logo">Data trader logo</string>
    <string name="login">LOGIN</string>
    <string name="create_account">Create account</string>
    <string name="login_to_datatrader_give_using_your_hat_private_data_account">Login to DataTrader GIVE using your HAT\n
        private data account
    </string>
    <string name="yourhatname">yourhatname</string>
    <string name="hubofallthings_net">.hubofallthings.net</string>
    <string name="next">NEXT</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="donate_your_data_for_research">Donate your data for research</string>
    <string name="give_data_to_good_causes_perhaps_a_university_for_research_or_a_charity_you_support">Give data to good
        causes, perhaps a university for\n research, or a charity you support
    </string>
    <string name="exchange_your_data_for_benefits">Exchange your data for benefits</string>
    <string name="share_your_data_and_in_exchange_receive_exclusive_gifts_vouchers_and_discounts">Share your data and in
        exchange receive exclusive gifts,\n vouchers and discounts
    </string>
    <string name="monetise_the_value_of_your_data">Monetise the value of your data</string>
    <string name="make_money_from_your_data_by_sharing_what_you_feel_comfortable_with">Make money from your data by
        sharing what you feel\n comfortable with
    </string>
    <string name="exchange_onboarding_screen_image">Exchange OnBoarding Screen Image</string>
    <string name="monetise_the_value_of_your_data_on_boarding_image">Monetise the value of your data On Boarding Image
    </string>
    <string name="donate_your_data_for_research_on_boarding_image">Donate your data for research on boarding image
    </string>
    <string name="skip">SKIP</string>
    <string name="done">DONE</string>
    <string name="on_boarding_forward_arrow">On boarding forward arrow</string>
    <string name="datatrader_settings">DataTrader settings</string>
    <string name="hat_settings">SETTINGS</string>
    <string name="resent_offers">RECENT OFFERS</string>
    <string name="my_offers">MY OFFERS</string>

    <string name="tech_support">Tech support</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="my_account">My account</string>
    <string name="go_to_my_hat_app">Go to my HAT app</string>
    <string name="manage_my_preferences">Manage my preferences</string>
    <string name="see_my_hat_enabled_data">See my HAT enabled data</string>
    <string name="see_my_data_transaction_history">See my data transaction history</string>
    <string name="reset_password">Reset password</string>
    <string name="log_out">LOG OUT</string>
    <string name="problem_claiming_offer">0/3 Problem claiming offer. Please tap here</string>
    <string name="fetching_2_3">2/3 Fetching</string>
    <string name="offer_completed">3/3 Offer completed</string>
    <string name="offer_accepted"><![CDATA[&#8531; Offer accepted]]></string>
    <string name="checking_status">Checking status…</string>
    <string name="view_my_offers">VIEW MY OFFERS</string>
    <string name="back_to_browse">Back to browse</string>
    <string name="confirmation_image">Confirmation image</string>
    <string name="accepted">%1$s\nAccepted</string>
    <string name="completed">%1$s\nCompleted</string>
    <string name="service_of_hatlab">Service of HATLAB</string>
    <string name="datatrader">DataTrader</string>
    <string name="accept">Accept</string>
    <string name="cash_earned_value">£%1$s</string>
    <string name="reset_password_email">Checked your email for your password reset request. You now have been logged out</string>

    <string name="reset_password_email_hint"><font size="14">Enter HAT-registered email address</font></string>
    <string name="reset_password_sub">If you are the owner of this HAT, please enter your registered email address</string>


    <string name="actions_required_string">1. Accept offer\n\n2. Await offer fulfilment\n\n3. Enjoy your benefits</string>
    <string name="password_reset_requested">Password reset requested</string>
    <string name="ok">OK</string>
    <string name="reward">Reward</string>
    <string name="your_voucher_is">Your voucher is : %1$s</string>
    <string name="datatradergive">DataTraderGive</string>


</resources>
