<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_marginStart="20dp"
              android:layout_marginEnd="20dp"
              android:padding="20dp"
              android:layout_height="wrap_content">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:text="@string/password_reset_requested" android:textSize="16sp"
              android:layout_marginStart="10dp"
              android:layout_marginEnd="10dp"
              android:fontFamily="@font/oswald_light"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:layout_marginTop="15dp"
              android:layout_marginStart="10dp"
              android:layout_marginEnd="10dp"
              android:text="@string/reset_password_email"
              android:textSize="14sp" android:fontFamily="@font/roboto"/>
    <Button android:layout_width="match_parent" android:layout_height="40dp"
            android:id="@+id/dialog_accept_button"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:stateListAnimator="@null"
            android:background="@drawable/login_button_rounded" android:text="@string/ok"
            android:textColor="#ffffff" android:textAllCaps="false" android:fontFamily="@font/roboto_medium"/>
</LinearLayout>