<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_splash"
        tools:context=".activity.MainActivity">

    <ImageView
            android:src="@drawable/data_trader_logo_text"
            android:layout_width="250dp"
            android:layout_height="61dp"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/data_trader"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.502" android:layout_marginTop="27dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"/>
    <ImageView
            android:src="@drawable/service_of_hatlab"
            android:layout_width="102dp"
            android:layout_height="24dp"
            android:contentDescription="@string/service_of_hat_lab"
            android:id="@+id/imageView2" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <ImageView
            android:src="@drawable/data_trader_logo_sign"
            android:layout_width="104dp"
            android:layout_height="109dp"
            android:contentDescription="@string/data_trader_logo"
            android:id="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="79dp" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/login"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:id="@+id/loginMainBtn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:background="@drawable/login_button_rounded"
            android:stateListAnimator="@null"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:fontFamily="@font/open_sans_condensed_bold"
            android:textColor="@color/darkBlueBackground"
            android:layout_marginBottom="22dp" app:layout_constraintBottom_toTopOf="@+id/createAccountMainBtn"/>
    <TextView
            android:text="@string/create_account"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:id="@+id/createAccountMainBtn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="26dp"
            app:layout_constraintBottom_toBottomOf="parent" android:fontFamily="@font/open_sans_condensed_bold"
            android:textColor="#ffffff" android:textAlignment="center"/>

</android.support.constraint.ConstraintLayout>
