<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ImageView
            android:layout_width="300dp"
            android:layout_height="400dp" app:srcCompat="@drawable/confirmation_icon"
            android:id="@+id/imageView8" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="33dp" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/confirmation_image"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Button
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:id="@+id/viewMyOffersBtn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textColor="@color/darkBlueBackground"
            android:background="@drawable/login_button_rounded"
            android:text="@string/view_my_offers"
            android:fontFamily="@font/oswald_bold" android:textSize="16sp" android:textAlignment="center"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/backToBrowseBtn"
            app:layout_constraintHorizontal_bias="0.496"/>
    <TextView
            android:text="@string/back_to_browse"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:id="@+id/backToBrowseBtn" android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:textColor="@color/darkBlueBackground"
            android:fontFamily="@font/oswald_bold" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.496"
    />
</android.support.constraint.ConstraintLayout>