<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ImageView
            android:layout_width="258dp"
            android:layout_height="300dp" app:srcCompat="@drawable/exchange_onboarding_img"
            android:id="@+id/imageView8" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/exchange_onboarding_screen_image"
            android:layout_marginEnd="8dp" android:layout_marginTop="150dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/exchange_your_data_for_benefits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viewMyOffersBtn" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textColor="@color/darkBlueBackground"
            android:fontFamily="@font/open_sans_condensed_bold" android:textSize="18sp" android:textAlignment="center"/>
    <TextView
            android:text="@string/share_your_data_and_in_exchange_receive_exclusive_gifts_vouchers_and_discounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:textAlignment="center"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/viewMyOffersBtn"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:textColor="@color/greyLight"
            android:fontFamily="@font/open_sans_condensed_light" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintVertical_bias="0.0"/>
</android.support.constraint.ConstraintLayout>