<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/monetise_onboarding_img"
            android:id="@+id/imageView8" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/monetise_the_value_of_your_data_on_boarding_image"

            android:layout_marginEnd="8dp" android:layout_marginTop="130dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/monetise_the_value_of_your_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viewMyOffersBtn" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textColor="@color/darkBlueBackground"
            android:fontFamily="@font/open_sans_condensed_bold" android:textSize="18sp" android:textAlignment="center"/>
    <TextView
            android:text="@string/make_money_from_your_data_by_sharing_what_you_feel_comfortable_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:textAlignment="center"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/viewMyOffersBtn"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:textColor="@color/greyLight"
            android:fontFamily="@font/open_sans_condensed_light" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintVertical_bias="0.0"/>
</android.support.constraint.ConstraintLayout>